# ScreenVisionSentinel

./: .gitignore  00_项目总控.md  01_需求与边界.md  02_技术架构.md  03_阶段路线图.md  04_测试与验收.md  05_安全与风险控制.md  06_开发日志.md  07_问题与决策记录.md  08_AI辅助开发规范.md  README.md  pyproject.toml  requirements.txt  start_server.bat  架构与测试规划_20260705.md
doc/: implementation_plan_20260705_1316.md  implementation_plan_20260705_1331.md  implementation_plan_20260705_1352.md  implementation_plan_20260705_1500.md
scripts/: ahk_example.ahk
src/screenvision_sentinel/: __init__.py  cli.py  main.py  server.py
src/screenvision_sentinel/actions/: __init__.py  base.py
src/screenvision_sentinel/app/: __init__.py  config.py
src/screenvision_sentinel/capture/: __init__.py  base.py  mss_capture.py
src/screenvision_sentinel/detection/: __init__.py  base.py
src/screenvision_sentinel/ocr/: __init__.py  base.py  engine_factory.py  mock.py  rapid_ocr.py
src/screenvision_sentinel/safety/: __init__.py  controller.py
src/screenvision_sentinel/storage/: sqlite_store.py
src/screenvision_sentinel/ui/: main_window.py
src/screenvision_sentinel/utils/: logging.py
src/screenvision_sentinel/vision/: __init__.py  debug_storage.py  models.py  pipeline.py  policy.py
tests/: test_config.py  test_detection.py  test_ocr.py  test_safety.py  test_storage.py
